# magicka

./: Cargo.toml  LICENSE
godot/: .gitignore  icon.svg.import  project.godot
godot/addons/gltf_magicka_materials/: gltf_extension.gd  gltf_extension.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
godot/addons/gltf_magicka_materials/shaders/: additive.gdshader  additive.gdshader.uid  basic.gdshader  basic.gdshader.uid  deferred.gdshader  deferred.gdshader.uid  magicka.gdshader  skinned_basic.gdshader  skinned_basic.gdshader.uid  skinned_deferred_normal_mapped.gdshader  skinned_deferred_normal_mapped.gdshader.uid
xnb_tool/: Cargo.toml  README.md  xnb_decompressed.ksy
xnb_tool/src/: args.rs  ext.rs  lib.rs  main.rs  xnb.rs
xnb_tool/src/content/: ability.rs  ai.rs  animation.rs  animation_action.rs  animation_clip.rs  animation_set.rs  attachment.rs  attack_property.rs  aura.rs  blood_kind.rs  boned_effect.rs  boned_light.rs  character.rs  character_model.rs  color.rs  damage.rs  effect.rs  element.rs  event.rs  faction.rs  gib.rs  item.rs  light.rs  mod.rs  model.rs  movement.rs  passive_ability.rs  resistance.rs  skinned_model.rs  sound.rs  special_ability.rs  texture.rs  vector3.rs  weapon_class.rs
xnb_tool/src/export/: mod.rs  model.rs  skinned_model.rs  texture.rs
xnb_tool/src/export/model/: basic.rs  mod.rs  skinned.rs  transformed_model.rs
