[package]
name    = "xnb_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow     = "1.0.98"
bcndecode  = "0.2.0"
byteorder  = "1.5.0"
flate2     = "1.1.1"
image      = "0.25.6"
lzxd       = "0.2.6"
rmp-serde  = "1.3.0"
serde_json = "1.0.140"
walkdir    = "2.5.0"

bitflags = { version = "2.9.0", features = ["serde"] }
clap     = { version = "4.5.37", features = ["derive"] }
glam     = { version = "0.30.2", features = ["serde"] }
serde    = { version = "1.0.219", features = ["derive"] }
strum    = { version = "0.27.1", features = ["derive"] }
